omnifood fix alignment styles

--- a/omnifood/resources/css/style.css
+++ b/omnifood/resources/css/style.css
@@ -310,7 +310,7 @@ header {
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
-  padding: 15px 0;
+  padding-bottom: 17px;
   color: #555;
 }
 
@@ -323,7 +323,7 @@ header {
 }
 
 .sticky .mobile-nav-icon {
-  margin-top: 0;
+  margin-top: 3px;
 }
 
 .sticky .mobile-nav-icon i {
